--- a/index.html
+++ b/index.html
@@ -9,65 +9,105 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 
 <body>
-    <nav id="desktop-nav">
-        <div class="logo">Bae SangHyun</div>
-        <div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+    <!-- Header -->
+    <header class="main-header">
+        <nav class="navbar header-nav navbar-expand-lg">
+            <div class="container">
+                <!-- Brand Name/Logo -->
+                <a href="#" class="navbar-brand">
+                    <h4 class="mb-0 logo">Bae <span class="text-primary">SangHyun</span></h4>
+                </a>
 
-    <nav id="hamburger-nav">
-        <div class="logo">Bae SangHyun</div>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="menu-links">
-                <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
-                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-            </div>
-        </div>
-    </nav>
-    <section id="profile">
-        <div class="section__pic-container">
-            <img src="./images/profile-pic.png" alt="profile picture">
-        </div>
-        <div class="section__text">
-            <p class="section__text__p1">사용자와 소통하며, 차이를 만드는 개발자</p>
-            <h1 class="title">배상현입니다.</h1>
-            <p class="section__text__p2">Frontend Developer</p>
-            <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./배상현 이력서.pdf')">이력서 다운로드</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">연락하기</button>
-            </div>
-            <div id="socials-container">
-                <img src="./images/github.png" alt="My Github profile" class="icon"
-                    onclick="location.href='https://github.com/DominicBae'">
-            </div>
-        </div>
-    </section>
+                <!-- Menu -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
+                    <ul class="navbar-nav mx-auto">
+                        <li>
+                            <a href="#home" class="nav-link">Home</a>
+                        </li>
+                        <li>
+                            <a href="#about" class="nav-link">About</a>
+                        </li>
+                        <li>
+                            <a href="#skills" class="nav-link">Skills</a>
+                        </li>
+                        <li>
+                            <a href="#projects" class="nav-link">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#contact" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
 
-    <section id="about">
-        <p class="section__text__p1">Get to Know More</p>
-        <h1 class="title">About Me</h1>
-        <div class="section-container"></div>
-    </section>
+                <!-- Button -->
+                <div class="ms-auto d-none d-lg-block">
+                    <a class="colored-btn" onclick="window.open('./배상현 이력서.pdf')">이력서 다운로드</a>
+                </div>
+
+                <!-- Mobile Menu -->
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbar-collapse-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Main -->
+    <main>
+        <!-- Home Section -->
+        <section id="home" class="home-section bg-gray">
+            <div class="container">
+                <div class="anim-elements">
+                    <div class="anim-element"><i class="bx bxl-html5"></i></div>
+                    <div class="anim-element"><i class="bx bxl-css3"></i></div>
+                    <div class="anim-element"><i class="bx bxl-javascript"></i></div>
+                    <div class="anim-element"><i class="bx bxl-react"></i></div>
+                    <div class="anim-element"><i class="bx bxl-github"></i></div>
+                </div>
+                <div class="row gy-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="home-intro text-center text-lg-start">
+                            <h6><span id="type-it"></span> 개발자</h6>
+                            <h1>배상현입니다.</h1>
+                            <p>Frontend Developer</p>
+                            <a href="#contact" class="colored-btn mt-1">
+                                연락하기
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 pt-4 pt-lg-0">
+                        <div class="home-image text-center">
+                            <img src="./images/프로필.jpg" alt="프로필 이미지">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section id="about" class="about-section bg">
+            <div class="container">
+                
+            </div>
+        </section>
+    </main>
+
+    <!-- 54분 18초 -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="./script.js"></script>
 </body>
 
