--- a/index.html
+++ b/index.html
@@ -96,9 +96,36 @@
         </section>
 
         <!-- About Section -->
-        <section id="about" class="about-section bg">
+        <section id="about">
             <div class="container">
-                
+                <h1 class="text-center pb-5">About</h1>
+                <div class="section-container">
+                    <div class="section__pic-container">
+                        <img src="./images/프로필.jpg" alt="프로필2" class="about-pic">
+                    </div>
+                    <div class="about-details-container">
+                        <div class="about-containers">
+                            <div class="details-container">
+                                <img src="./images/experience.png" alt="Experience icon" class="icon">
+                                <h3>경력</h3>
+                                <p>휴로 인터랙티브, 디지털 마케팅팀 (2021.02 ~ 2021.10) <br>해리포터와 덕후들의 방, SNS 채널 운영 (2015.11 ~ )</p>
+                            </div>
+                            <div class="details-container">
+                                <img src="./images/education.png" alt="Education icon" class="icon">
+                                <h3>학력</h3>
+                                <p>세종사이버대학교, 컴퓨터·AI공학과(2022.03 ~ )<br>인덕원 고등학교 졸업(2010.03. ~ 2013.02.)</p>
+                            </div>
+                        </div>
+                        <div class="text-container">
+                            <p>
+                                저는 <strong>UI/UX 디자인 개선 경험</strong>을 통해 웹 개발에 관심을 갖게 되었고, <strong>사용자에게 직관적이고 편리한 웹사이트</strong>를 제공하는 것을 목표로 하고 있습니다. 
+                                <strong>8년간의 SNS 채널 운영 경험</strong>과 <strong>다양한 프로젝트 참여</strong>를 통해 <strong>사용자 중심의 인터페이스 설계 및 기술적 역량</strong>을 키웠습니다. 
+                                팀과의 협업을 중요시하며, 항상 <strong>더 나은 웹 환경</strong>을 만들기 위해 노력하고 있습니다.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#skills'">
             </div>
         </section>
     </main>
