--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <!-- Menu -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li>
                             <a href="#home" class="nav-link">Home</a>
                         </li>
@@ -46,12 +46,6 @@
                         </li>
                     </ul>
                 </div>
-
-                <!-- Button -->
-                <div class="ms-auto d-none d-lg-block">
-                    <a class="colored-btn" onclick="window.open('./배상현 이력서.pdf')">이력서 다운로드</a>
-                </div>
-
                 <!-- Mobile Menu -->
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbar-collapse-toggle">
@@ -81,9 +75,7 @@
                             <h6><span id="type-it"></span> 개발자</h6>
                             <h1>배상현입니다.</h1>
                             <p>Frontend Developer</p>
-                            <a href="#contact" class="colored-btn mt-1">
-                                연락하기
-                            </a>
+                            <a class="colored-btn" onclick="window.open('./배상현 이력서.pdf')">이력서 다운로드</a>
                         </div>
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0">
@@ -118,14 +110,36 @@
                         </div>
                         <div class="text-container">
                             <p>
-                                저는 <strong>UI/UX 디자인 개선 경험</strong>을 통해 웹 개발에 관심을 갖게 되었고, <strong>사용자에게 직관적이고 편리한 웹사이트</strong>를 제공하는 것을 목표로 하고 있습니다. 
-                                <strong>8년간의 SNS 채널 운영 경험</strong>과 <strong>다양한 프로젝트 참여</strong>를 통해 <strong>사용자 중심의 인터페이스 설계 및 기술적 역량</strong>을 키웠습니다. 
+                                저는 <strong>UI/UX 디자인 개선 경험</strong>을 통해 웹 개발에 관심을 갖게 되었고, <strong>사용자에게 직관적이고 편리한
+                                    웹사이트</strong>를 제공하는 것을 목표로 하고 있습니다.
+                                <strong>8년간의 SNS 채널 운영 경험</strong>과 <strong>다양한 프로젝트 참여</strong>를 통해 <strong>사용자 중심의
+                                    인터페이스 설계 및 기술적 역량</strong>을 키웠습니다.
                                 팀과의 협업을 중요시하며, 항상 <strong>더 나은 웹 환경</strong>을 만들기 위해 노력하고 있습니다.
                             </p>
                         </div>
                     </div>
                 </div>
                 <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#skills'">
+            </div>
+        </section>
+
+        <!-- SKILLS SECTION -->
+        <section id="skills" class="skills-section bg-gray">
+            <div class="container">
+                <h1 class="text-center pb-5">Skills</h1>
+                <div class="skills-container">
+                    <div class="card">
+                        <div class="front"></div>
+                        <div class="back">
+                            <h1>HTML</h1>
+                            <p>
+                                1.HTML을 이용하여 웹사이트의 구조를 분석하고 골격을 설계할 수 있습니다.<br>
+                                2.웹 접근성 및 웹 표준을 준수하며, 시멘틱 태그를 사용한 마크업이 가능합니다.<br>
+                                3.시멘틱 마크업을 통해 유지보수가 용이한 구조를 설계할 수 있습니다.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
