--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="details-container">
                                 <img src="./images/experience.png" alt="Experience icon" class="icon">
                                 <h3>경력</h3>
-                                <p>휴로 인터랙티브, 디지털 마케팅팀 (2021.02 ~ 2021.10) <br>해리포터와 덕후들의 방, SNS 채널 운영 (2015.11 ~ )</p>
+                                <p>휴로 인터랙티브, 디지털 마케팅팀 (2021.02 ~ 10) <br>해리포터와 덕후들의 방, SNS 채널 운영 (2015.11 ~ )</p>
                             </div>
                             <div class="details-container">
                                 <img src="./images/education.png" alt="Education icon" class="icon">
@@ -125,26 +125,21 @@
 
         <!-- SKILLS SECTION -->
         <section id="skills" class="skills-section bg-gray">
-            <div class="container">
+            <div>
                 <h1 class="text-center pb-5">Skills</h1>
-                <div class="skills-container">
-                    <div class="card">
-                        <div class="front"></div>
-                        <div class="back">
-                            <h1>HTML</h1>
-                            <p>
-                                1.HTML을 이용하여 웹사이트의 구조를 분석하고 골격을 설계할 수 있습니다.<br>
-                                2.웹 접근성 및 웹 표준을 준수하며, 시멘틱 태그를 사용한 마크업이 가능합니다.<br>
-                                3.시멘틱 마크업을 통해 유지보수가 용이한 구조를 설계할 수 있습니다.
-                            </p>
-                        </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back">
+                        <h1>HTML</h1>
+                        <p>Additional info on the back of the card</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- 54분 18초 -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
