--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- About Section -->
         <section id="about">
             <div class="container">
-                <h1 class="text-center pb-5">About</h1>
+                <h1 class="text-center pb-5">ABOUT</h1>
                 <div class="section-container">
                     <div class="section__pic-container">
                         <img src="./images/프로필.jpg" alt="프로필2" class="about-pic">
@@ -124,22 +124,86 @@
         </section>
 
         <!-- SKILLS SECTION -->
+        <!-- SKILLS SECTION -->
         <section id="skills" class="skills-section bg-gray">
-            <div>
-                <h1 class="text-center pb-5">Skills</h1>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                        <h1>HTML</h1>
-                        <p>Additional info on the back of the card</p>
+            <div class="container">
+                <h1 class="text-center pb-5">SKILLS</h1>
+                <div class="skills-section-container">
+                    <div class="first-line">
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-html"></div>
+                                <div class="back">
+                                    <h1>HTML</h1>
+                                    <p>1. HTML로 웹사이트 구조를 설계할 수 있습니다. <br>
+                                        2. 웹 접근성과 표준을 준수하며, 시멘틱 태그를 사용한 마크업이 가능합니다. <br>
+                                        3. 유지보수가 용이한 시멘틱 마크업을 작성할 수 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-css"></div>
+                                <div class="back">
+                                    <h1>CSS</h1>
+                                    <p>1. CSS로 웹사이트 스타일과 레이아웃을 구현할 수 있습니다. <br>
+                                        2. 반응형 디자인으로 다양한 화면에서도 일관된 사용자 경험을 제공합니다. <br>
+                                        3. Flexbox와 Grid로 효율적인 페이지 구조를 설계할 수 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-js"></div>
+                                <div class="back">
+                                    <h1>JavaScript</h1>
+                                    <p>1. JavaScript로 웹사이트의 동적인 기능을 구현할 수 있습니다. <br>
+                                        2. DOM 조작과 이벤트 핸들링을 통해 사용자 경험을 개선할 수 있습니다. <br>
+                                        3. API 호출로 외부 데이터를 불러와 웹 페이지에 표시할 수 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="second-line">
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-react"></div>
+                                <div class="back">
+                                    <h1>React</h1>
+                                    <p>1. React로 간단한 컴포넌트 기반 UI를 만들 수 있습니다. <br>
+                                        2. 상태를 관리하여 UI에 동적인 데이터를 반영할 수 있습니다. <br>
+                                        3. React Router를 사용해 기본적인 페이지 간 네비게이션을 구현할 수 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-github"></div>
+                                <div class="back">
+                                    <h1>GitHub</h1>
+                                    <p>1. GitHub에 개인 프로젝트를 기록하고 공유할 수 있습니다. <br>
+                                        2. GitHub을 통해 협업과 프로젝트 관리를 경험했습니다. <br>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container">
+                            <div class="card">
+                                <div class="front-photoshop"></div>
+                                <div class="back">
+                                    <h1>Photoshop</h1>
+                                    <p>1. 기본적인 사진 편집 및 그래픽 디자인 작업이 가능합니다. <br>
+                                        2. 레이어와 마스크를 활용해 이미지를 효과적으로 수정할 수 있습니다. <br>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
 
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
