--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     </div>
                 </div>
             </div>
+            <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#about'">
         </section>
 
         <!-- About Section -->
@@ -124,13 +125,12 @@
         </section>
 
         <!-- SKILLS SECTION -->
-        <!-- SKILLS SECTION -->
         <section id="skills" class="skills-section bg-gray">
             <div class="container">
-                <h1 class="text-center pb-5">SKILLS</h1>
+                <h1 class="text-center pb-5 skills-computer">SKILLS</h1>
                 <div class="skills-section-container">
                     <div class="first-line">
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-html"></div>
                                 <div class="back">
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-css"></div>
                                 <div class="back">
@@ -152,7 +152,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-js"></div>
                                 <div class="back">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="second-line">
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-react"></div>
                                 <div class="back">
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-github"></div>
                                 <div class="back">
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-container">
+                        <div class="card-container skills-computer">
                             <div class="card">
                                 <div class="front-photoshop"></div>
                                 <div class="back">
@@ -200,6 +200,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+            <!-- Mobile Ver. -->
+            <div>
+
             </div>
         </section>
 
