--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="main-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-                <!-- Brand Name/Logo -->
+                <!-- Name/Logo -->
                 <a href="#" class="navbar-brand">
                     <h4 class="mb-0 logo">Bae <span class="text-primary">SangHyun</span></h4>
                 </a>
@@ -91,7 +91,7 @@
         <!-- About Section -->
         <section id="about">
             <div class="container">
-                <h1 class="text-center pb-5">ABOUT</h1>
+                <h3 class="text-center section-title mb-4">ABOUT</h3>
                 <div class="section-container">
                     <div class="section__pic-container">
                         <img src="./images/프로필.jpg" alt="프로필2" class="about-pic">
@@ -127,87 +127,73 @@
         <!-- SKILLS SECTION -->
         <section id="skills" class="skills-section bg-gray">
             <div class="container">
-                <h1 class="text-center pb-5 skills-computer">SKILLS</h1>
-                <div class="skills-section-container">
-                    <div class="first-line">
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-html"></div>
-                                <div class="back">
-                                    <h1>HTML</h1>
-                                    <p>1. HTML로 웹사이트 구조를 설계할 수 있습니다. <br>
-                                        2. 웹 접근성과 표준을 준수하며, 시멘틱 태그를 사용한 마크업이 가능합니다. <br>
-                                        3. 유지보수가 용이한 시멘틱 마크업을 작성할 수 있습니다.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-css"></div>
-                                <div class="back">
-                                    <h1>CSS</h1>
-                                    <p>1. CSS로 웹사이트 스타일과 레이아웃을 구현할 수 있습니다. <br>
-                                        2. 반응형 디자인으로 다양한 화면에서도 일관된 사용자 경험을 제공합니다. <br>
-                                        3. Flexbox와 Grid로 효율적인 페이지 구조를 설계할 수 있습니다.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-js"></div>
-                                <div class="back">
-                                    <h1>JavaScript</h1>
-                                    <p>1. JavaScript로 웹사이트의 동적인 기능을 구현할 수 있습니다. <br>
-                                        2. DOM 조작과 이벤트 핸들링을 통해 사용자 경험을 개선할 수 있습니다. <br>
-                                        3. API 호출로 외부 데이터를 불러와 웹 페이지에 표시할 수 있습니다.</p>
-                                </div>
+                <div class="section-heading">
+                    <h3 class="text-center skills-mobile section-title">SKILLS</h3>
+                </div>
+
+                <!-- Mobile Ver. -->
+                <div class="row gy-4">
+                    <div class="col-md-6">
+                        <div class="feature-box bg-1 skills-mobile">
+                            <div class="icon"><i class="bx bxl-html5"></i></div>
+                            <div class="content">
+                                <h5>HTML</h5>
+                                <p>웹 접근성과 표준을 준수한 시멘틱 마크업을 설계하여, 유지보수가 용이한 구조를 작성할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="second-line">
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-react"></div>
-                                <div class="back">
-                                    <h1>React</h1>
-                                    <p>1. React로 간단한 컴포넌트 기반 UI를 만들 수 있습니다. <br>
-                                        2. 상태를 관리하여 UI에 동적인 데이터를 반영할 수 있습니다. <br>
-                                        3. React Router를 사용해 기본적인 페이지 간 네비게이션을 구현할 수 있습니다.</p>
-                                </div>
+                    <div class="col-md-6">
+                        <div class="feature-box bg-2 skills-mobile">
+                            <div class="icon"><i class="bx bxl-css3"></i></div>
+                            <div class="content">
+                                <h5>CSS</h5>
+                                <p>반응형 디자인을 구현하고, Flexbox와 Grid를 활용해 다양한 화면에서 일관된 경험을 제공하는 효율적인 레이아웃을 설계할 수 있습니다.
+                                </p>
                             </div>
                         </div>
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-github"></div>
-                                <div class="back">
-                                    <h1>GitHub</h1>
-                                    <p>1. GitHub에 개인 프로젝트를 기록하고 공유할 수 있습니다. <br>
-                                        2. GitHub을 통해 협업과 프로젝트 관리를 경험했습니다. <br>
-                                    </p>
-                                </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-box bg-3 skills-mobile">
+                            <div class="icon"><i class="bx bxl-javascript"></i></div>
+                            <div class="content">
+                                <h5>Java Script</h5>
+                                <p>DOM 조작, 이벤트 핸들링, API 호출을 통해 동적인 웹 기능을 구현하고 사용자 경험을 개선할 수 있습니다.
+                                </p>
                             </div>
                         </div>
-                        <div class="card-container skills-computer">
-                            <div class="card">
-                                <div class="front-photoshop"></div>
-                                <div class="back">
-                                    <h1>Photoshop</h1>
-                                    <p>1. 기본적인 사진 편집 및 그래픽 디자인 작업이 가능합니다. <br>
-                                        2. 레이어와 마스크를 활용해 이미지를 효과적으로 수정할 수 있습니다. <br>
-                                    </p>
-                                </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-box bg-4 skills-mobile">
+                            <div class="icon"><i class="bx bxl-react"></i></div>
+                            <div class="content">
+                                <h5>React</h5>
+                                <p>컴포넌트 기반 UI를 만들고, 상태 관리 및 React Router를 통해 동적인 데이터와 페이지 네비게이션을 구현할 수 있습니다. <br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-box bg-5 skills-mobile">
+                            <div class="icon"><i class="bx bxl-github"></i></div>
+                            <div class="content">
+                                <h5>GitHub</h5>
+                                <p>GitHub에 개인 프로젝트를 기록·공유하고, 협업과 프로젝트 관리 경험을 쌓았습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-box bg-6 skills-mobile">
+                            <div class="icon"><i class="bx bxl-adobe"></i></div>
+                            <div class="content">
+                                <h5>Photoshop</h5>
+                                <p>기본적인 사진 편집과 레이어, 마스크를 활용한 이미지 수정 작업이 가능합니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
-            <!-- Mobile Ver. -->
-            <div>
 
-            </div>
         </section>
-
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
