--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0">
                         <div class="home-image text-center">
-                            <img src="./images/프로필.jpg" alt="프로필 이미지">
+                            <img src="./images/Profile1.png" alt="프로필1">
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                 <h3 class="text-center section-title mb-4">ABOUT</h3>
                 <div class="section-container">
                     <div class="section__pic-container">
-                        <img src="./images/프로필.jpg" alt="프로필2" class="about-pic">
+                        <img src="./images/Profile2.jpg" alt="프로필2" class="about-pic">
                     </div>
                     <div class="about-details-container">
                         <div class="about-containers">
@@ -130,8 +130,6 @@
                 <div class="section-heading">
                     <h3 class="text-center skills-mobile section-title">SKILLS</h3>
                 </div>
-
-                <!-- Mobile Ver. -->
                 <div class="row gy-4">
                     <div class="col-md-6">
                         <div class="feature-box bg-1 skills-mobile">
@@ -192,7 +190,70 @@
                 </div>
             </div>
             <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        </section>
 
+        <section id="projects" class="projects-seection">
+            <div class="container">
+                <div class="section-heading">
+                    <h3 class="text-center section-title">PROJECTS</h3>
+                </div>
+                <div class="experience-details-container">
+                    <div class="about-containers">
+                        <div class="details-container color-container">
+                            <div class="article-container">
+                                <img src="./images/project-1.png" alt="Project1" class="project-img">
+                            </div>
+                            <h2 class="experience-sub-title project-title mt-2">Pass Ticket</h2>
+                            <p>HTML, CSS, 부트스트랩으로 만든 티켓팅 웹사이트</p>
+                            <div class="btn-container">
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://github.com/DominicBae/PassTicket'">
+                                    Github
+                                </button>
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://passtickets.netlify.app/'">
+                                    Demo
+                                </button>
+                            </div>
+                        </div>
+                        <div class="details-container color-container">
+                            <div class="article-container">
+                                <img src="./images/project-2.png" alt="Project1" class="project-img">
+                            </div>
+                            <h2 class="experience-sub-title project-title mt-2">Seoul For You</h2>
+                            <p>API를 활용해 외국인들의 서울 여행을 돕는 웹사이트</p>
+                            <div class="btn-container">
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://github.com/DominicBae/PassTicket'">
+                                    Github
+                                </button>
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://passtickets.netlify.app/'">
+                                    Demo
+                                </button>
+                            </div>
+                        </div>
+                     
+                        <div class="details-container color-container">
+                            <div class="article-container">
+                                <img src="./images/project-3.png" alt="Project1" class="project-img">
+                            </div>
+                            <h2 class="experience-sub-title project-title mt-2">Project Three</h2>
+                            <p>자신이 원하는 티켓을 한 번에!</p>
+                            <div class="btn-container">
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://github.com/DominicBae/PassTicket'">
+                                    Github
+                                </button>
+                                <button class="btn btn-color-2 project-btn"
+                                    onclick="location.href='https://passtickets.netlify.app/'">
+                                    Demo
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
         </section>
     </main>
 
