--- a/index.html
+++ b/index.html
@@ -221,20 +221,20 @@
                                 <img src="./images/project-2.png" alt="Project1" class="project-img">
                             </div>
                             <h2 class="experience-sub-title project-title mt-2">Seoul For You</h2>
-                            <p>API를 활용해 외국인들의 서울 여행을 돕는 웹사이트</p>
+                            <p>외국인들의 서울 여행을 돕는 웹사이트</p>
                             <div class="btn-container">
                                 <button class="btn btn-color-2 project-btn"
-                                    onclick="location.href='https://github.com/DominicBae/PassTicket'">
+                                    onclick="location.href='https://github.com/Hotpack1/SeoulForYou'">
                                     Github
                                 </button>
                                 <button class="btn btn-color-2 project-btn"
-                                    onclick="location.href='https://passtickets.netlify.app/'">
+                                    onclick="location.href='https://seoulforyou.netlify.app/'">
                                     Demo
                                 </button>
                             </div>
                         </div>
-                     
-                        <div class="details-container color-container">
+
+                        <!-- <div class="details-container color-container">
                             <div class="article-container">
                                 <img src="./images/project-3.png" alt="Project1" class="project-img">
                             </div>
@@ -250,10 +250,28 @@
                                     Demo
                                 </button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
+        </section>
+
+        <section id="contact" class="contact-seection">
+            <div class="container">
+                <div class="section-heading">
+                    <h3 class="text-center section-title">contact</h3>
+                </div>
+                <div class="contact-info-upper-container">
+                    <div class="contact-info-container">
+                        <img src="./images/email.png" alt="Email icon" class="icon contact-icon">
+                        <p><a href="mailto:baehope823@hanmail.net">baehope823@hanmail.net</a></p>
+                    </div>
+                    <div class="contact-info-container">
+                        <img src="./images/email.png" alt="Phone icon" class="icon contact-icon">
+                        <p>010-4936-4552</p>
+                    </div>
+                </div>
+                <img src="./images/up-arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#home'">
         </section>
     </main>
 
